Fix screenshot path to use absolute GitHub URL
- Change screenshot src from relative path (../../screenshot/...) to absolute GitHub URL
- Prevents 404 error on GitHub Pages where only website/public is deployed
- Uses same raw.githubusercontent.com URL as meta tags for consistency

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -350,7 +350,7 @@
             </section>
             
             <section class="screenshot">
-                <img src="../../screenshot/api_document.png" alt="Swagger API Documentation Screenshot" onerror="this.style.display='none'">
+                <img src="https://raw.githubusercontent.com/klee1611/cookiecutter-fastapi-mongo/main/screenshot/api_document.png" alt="Swagger API Documentation Screenshot" onerror="this.style.display='none'">
             </section>
             
             <section id="get-started" class="quick-start">
