Change Poetry version from 2.2.1 to 2.x for maintainability
- Update hardcoded Poetry 2.2.1 to Poetry 2.x in all locations
- More maintainable as minor/patch versions won't need updates
- Updated in:
  * README.md prerequisites
  * Meta description tag
  * Open Graph description
  * Badge in header
  * System requirements list
  * Developer Experience feature card
- Avoids version-specific content that needs frequent updates

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FastAPI MongoDB Template | Production-Ready Backend Boilerplate with Cookiecutter</title>
-    <meta name="description" content="Production-ready FastAPI and MongoDB cookiecutter template for building high-performance async RESTful APIs. Includes Docker, Poetry 2.2.1, pytest, and automatic Swagger documentation.">
+    <meta name="description" content="Production-ready FastAPI and MongoDB cookiecutter template for building high-performance async RESTful APIs. Includes Docker, Poetry, pytest, and automatic Swagger documentation.">
     <meta name="keywords" content="fastapi, mongodb, cookiecutter, python, async, rest api, backend template, motor, poetry, docker, microservices, api boilerplate">
     <meta name="author" content="klee1611">
     <meta name="robots" content="index, follow">
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://klee1611.github.io/cookiecutter-fastapi-mongo/">
     <meta property="og:title" content="FastAPI MongoDB Template - Production-Ready Backend Boilerplate">
-    <meta property="og:description" content="Production-ready FastAPI and MongoDB cookiecutter template for building high-performance async RESTful APIs with Docker and Poetry 2.2.1.">
+    <meta property="og:description" content="Production-ready FastAPI and MongoDB cookiecutter template for building high-performance async RESTful APIs with Docker and Poetry.">
     <meta property="og:image" content="https://raw.githubusercontent.com/klee1611/cookiecutter-fastapi-mongo/main/screenshot/api_document.png">
     
     <!-- Twitter -->
@@ -348,7 +348,7 @@
             
             <div class="badges">
                 <img src="https://img.shields.io/badge/Python-3.10+-3776ab.svg?style=flat-square&logo=python&logoColor=white" alt="Python 3.10+">
-                <img src="https://img.shields.io/badge/Poetry-2.2.1-60a5fa.svg?style=flat-square" alt="Poetry 2.2.1">
+                <img src="https://img.shields.io/badge/Poetry-2.x-60a5fa.svg?style=flat-square" alt="Poetry 2.x">
                 <img src="https://img.shields.io/badge/MongoDB-4.4+-47A248.svg?style=flat-square&logo=mongodb&logoColor=white" alt="MongoDB 4.4+">
                 <img src="https://github.com/klee1611/cookiecutter-fastapi-mongo/actions/workflows/lint.yml/badge.svg" alt="Lint">
                 <img src="https://github.com/klee1611/cookiecutter-fastapi-mongo/actions/workflows/ci.yml/badge.svg" alt="CI Tests">
@@ -382,7 +382,7 @@
                 <h2>System Requirements</h2>
                 <ul>
                     <li>Python 3.10 or higher</li>
-                    <li><a href="https://python-poetry.org/" target="_blank" rel="noopener noreferrer">Poetry 2.2.1</a> - Python dependency management tool</li>
+                    <li><a href="https://python-poetry.org/" target="_blank" rel="noopener noreferrer">Poetry 2.x</a> - Python dependency management tool</li>
                     <li><a href="https://github.com/cookiecutter/cookiecutter" target="_blank" rel="noopener noreferrer">Cookiecutter</a> - Project templating tool</li>
                     <li>Docker - For containerization</li>
                     <li>GNU Make - For running build commands</li>
@@ -407,7 +407,7 @@
                         <ul>
                             <li>Auto-generated Swagger documentation</li>
                             <li>Pytest with async support</li>
-                            <li>Poetry 2.2.1 for dependency management</li>
+                            <li>Poetry 2.x for dependency management</li>
                             <li>Type hints with MyPy</li>
                         </ul>
                     </div>
