--- a/index.html
+++ b/index.html
@@ -486,9 +486,14 @@ make docker-compose-down</code></pre>
             </section>
         </div>
         
-        <footer>
-            <p>Created and maintained by <a href="https://github.com/klee1611" target="_blank" rel="noopener noreferrer">klee1611</a></p>
-            <p style="margin-top: 0.75rem;">⭐ Star this project on <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo" target="_blank" rel="noopener noreferrer">GitHub</a> if you find it useful</p>
+				<footer class="footer">
+					<div class="container">
+								<div class="footer-support">
+										<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="klee1611" data-color="#FFDD00" data-emoji=""  data-font="Bree" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+								</div>
+								<p>Created and maintained by <a href="https://github.com/klee1611" target="_blank" rel="noopener noreferrer">klee1611</a></p>
+								<p style="margin-top: 0.75rem;">⭐ Star this project on <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo" target="_blank" rel="noopener noreferrer">GitHub</a> if you find it useful</p>
+					</div>
         </footer>
     </div>
 </body>
